2007-12-13  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- Get Connections from the system settings daemon if it's around, and
			track changes to those Connections	

2007-12-13  Dan Williams  <dcbw@redhat.com>

	* nm-applet.conf
		- Allow other apps to query connections

2007-12-10  Dan Williams  <dcbw@redhat.com>

	Noticed by Christian Persch <chpe@gnome.org> (gnome.org #500516)

	* configure.ac
		- Require gmodule-export package

	* src/connection-editor/Makefile.am
	  src/connection-editor/byte-array-editor.c
	  src/connection-editor/nm-connection-editor.glade
		- HIG-ify

2007-12-10  Tambet Ingo  <tambet@gmail.com>

	* Replace all occurences of 'UMTS' with 'GSM'.

2007-12-07  Dan Williams  <dcbw@redhat.com>

	Patch from Jani Monoses <jani@ubuntu.com>

	* configure.ac
	  src/main.c
	  src/vpn-properties/Makefile.am
		- Drop last libgnome dep for GTK > 2.10 (gnome.org #471967)

2007-12-07  Dan Williams  <dcbw@redhat.com>

	Noticed by Christian Persch <chpe@gnome.org>

	* src/menu-items.c
		- (nm_network_menu_item_class_dispose): always chain up to parent when
			disposing

2007-12-07  Dan Williams  <dcbw@redhat.com>

	Patch from Christian Persch <chpe@gnome.org>

	* src/vpn-properties/nm-vpn-properties.c
		- (vpn_druid_vpn_confirm_page_prepare): fix the object the confirm text
			gets applied to
		- (init_app): Fix spacing around elements to better conform to HIG

2007-12-07  Dan Williams  <dcbw@redhat.com>

	Patch from Christian Persch <chpe@gnome.org>

	* src/vpn-properties/nm-vpn-properties.c
		- (main): don't call gtk_init() twice (gnome.org #473287)

2007-12-05  Dan Williams  <dcbw@redhat.com>

	* COPYING.LIB
		- Because we distribute eggtrayicon, need to include the LGPL too
			(gnome.org #449111)

2007-12-05  Dan Williams  <dcbw@redhat.com>

	* src/vpn-properties/nm-vpn-properties.c
		- (vpn_druid_vpn_confirm_page_finish, edit_cb): ensure that the edited
			VPN connection has a vpn-properties setting to work around previous